--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,10 +3,15 @@
 @import url("fontawesome-all.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Playfair+Display:wght@600;700&display=swap');
 
+html {
+	scroll-behavior: smooth;
+}
+
 .project-item .image {
 	margin: 0 ;
 	position: relative;
 	margin-bottom: 2rem;
+	overflow: hidden;
 }
 
 .project-item .image img {
@@ -21,18 +26,17 @@
 	justify-content: space-between;
 	position: absolute;
 	width: 100%;
-	bottom: 0;
+	bottom: -1px;
 	right: 0;
-	padding: .3rem;
 }
 
 .icons-section a {
-	color: rgb(88, 88, 88);
+	color: rgba(255, 253, 253, 0.904);
 	font-size: 1rem;
 	border: 0;
 	box-shadow: 1px 1px 10px 1px rgba(78, 78, 78, 0.158);
 	margin: 0;
-	background-color: rgba(255, 255, 255, 0.863);
+	background-image: var(--background-badass);
 	border-radius: 100px;
 	padding: 0 .7rem;
 	font-weight: 700;
@@ -41,21 +45,23 @@
 
 
 }
+
+.icons-section a:first-child {
+	padding-left: 2rem;
+	margin-left: -1rem;
+}
+
 .icons-section .icon {
 	height: 40px;
-	width: 40px;
+	margin-right: -1rem;
+	padding-right: 1.5rem;
 	font-size: 1.5rem;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
+	padding-left: .5rem;
 
 }
-
-.icons-section a:hover {
-	color: black !important;
-	background-color: rgb(255, 255, 255);
-}
-
 
 
 
@@ -87,4 +93,47 @@
 
 header .avatar {
 	border: 2px solid rgba(255, 255, 255, 0.514);
+}
+
+.quote {
+	margin-bottom: 0;
+}
+
+
+.email {
+	margin-top: 1rem;
+	font-size: 1rem;
+}
+
+.subheading {
+	margin-top: 2rem;
+	font-size: 1.2rem;
+}
+
+
+.img-gallery {
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.img-gallery div {
+	height: 100%;
+}
+
+.grid-image {
+	justify-self: stretch;
+	border-radius: 10px;
+	object-fit: cover;
+	height: 230px;
+	width: 100%;
+}
+
+/* .question {
+	font-family: var(--font-header);
+	color: rgb(61, 61, 61);
+	font-size: 1.5rem;
+} */
+
+.stuff {
+	font-size: 1rem;
 }
