--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -2,7 +2,7 @@
     --shadow-main: 1px 1px 10px 2px rgba(104, 104, 104, 0.24);
 
     --gradient-main: linear-gradient(315deg, #7cffcb 0%, #74f2ce 74%);
-    --background-badass: url("images/overlay.png"), linear-gradient(to bottom right, rgb(75, 74, 74), black);
+    --background-badass: url("images/overlay.png"), linear-gradient(to bottom right, rgba(0, 0, 0, 0.185), rgba(0, 0, 0, 0.726));
     --font-header: 'Playfair Display', serif;
     --font-main: 'Montserrat', sans-serif;
     
